Integrated react-bootstrap module and fixed some bags

--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "weather service es6 from openweathermap.org source",
   "main": "webpack.config.js",
   "dependencies": {
-    "babel-preset-react": "^6.3.13",
     "babel-core": "^6.3.26",
-    "bootstrap": "^3.3.6",
-    "highcharts": "^4.2.1",
-    "copy-webpack-plugin": "^0.3.3",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "bootstrap": "^3.3.6",
+    "copy-webpack-plugin": "^0.3.3",
+    "highcharts": "^4.2.1",
     "history": "^1.17.0",
-    "react": "^0.14.5",
-    "react-router": "^1.0.3",
-    "react-dom": "^0.14.5",
     "jquery": "^2.1.4",
+    "react": "^0.14.5",
+    "react-dom": "^0.14.5",
+    "react-mixin": "^2.0.2",
+    "react-router": "^1.0.3",
     "webpack": "^1.12.9"
   },
   "devDependencies": {},
