--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather_service",
   "version": "1.0.0",
-  "description": "weather service es6 from openweathermap.org source",
+  "description": "weather service es6 from openWeatherMap.org source",
   "main": "webpack.config.js",
   "dependencies": {
     "babel-core": "^6.3.26",
@@ -33,7 +33,7 @@
     "weather",
     "service",
     "es6",
-    "openweathermap.org"
+    "openWeatherMap.org"
   ],
   "author": "Mozhaev Alexandr",
   "license": "ISC",
