--- a/package.json
+++ b/package.json
@@ -1,44 +1,35 @@
 {
   "name": "weather_service",
-  "version": "1.0.0",
-  "description": "weather service es6 from openWeatherMap.org source",
-  "main": "webpack.config.js",
+  "version": "1.1.0",
+  "description": "Weather service es6 from openWeatherMap.org source",
+  "main": "src/index.js",
   "dependencies": {
-    "babel-core": "^6.3.26",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "bootstrap": "^3.3.6",
-    "copy-webpack-plugin": "^0.3.3",
-    "highcharts": "^8.2.0",
-    "history": "^1.17.0",
-    "jquery": "^3.5.1",
-    "react": "^0.14.5",
-    "react-dom": "^0.14.5",
-    "react-mixin": "^2.0.2",
-    "react-router": "^1.0.3",
-    "webpack": "^1.12.9"
+    "highcharts": "^9.3.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
+    "react-dom": "^17.0.2",
+    "react-mixin": "^5.0.0",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.5.1",
+    "highcharts-more": "^0.1.7",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress --colors"
+    "start": "webpack serve --open --progress --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zetraison/es6-weather-service.git"
-  },
-  "keywords": [
-    "weather",
-    "weather",
-    "service",
-    "es6",
-    "openWeatherMap.org"
-  ],
   "author": "Mozhaev Alexandr",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zetraison/es6-weather-service/issues"
-  },
-  "homepage": "https://github.com/zetraison/es6-weather-service#readme"
+  "license": "MIT"
 }
